output/GluGlu_Radion_eTau_2018/err/file_3275832.11.err
  File "/afs/cern.ch/work/v/vdamante/public/analysis/triggerStudiesAnalysis.py", line 1358
    baseline_paths_dict['2016']['tauTau']['recommended'] = []
    ^
IndentationError: unexpected indent
